samples/_failures_safe/1761411973_1a0215_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bd1e97c6.c: In function ‘transpose_matrix’:
./samples/SAFE/__tmp_bd1e97c6.c:148:5: error: expected declaration or statement at end of input
  148 |     }
      |     ^
